--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ workflows:
   workflow:
     jobs:
       - go-test:
+          name: Go 1.15
+          docker-image: circleci/golang:1.15
+          run-lint: true
+          test-coverage: true
+          test-tls: true
+      - go-test:
           name: Go 1.14
           docker-image: circleci/golang:1.14
           run-lint: true
@@ -137,7 +143,7 @@ jobs:
   test-publish:
     docker:
       - &release_docker_image
-        image: circleci/golang:1.10.3
+        image: circleci/golang:1.14.9
         environment:
           <<: *environment
 
