(v6) update Go versions, drop end-to-end TLS test (#190)

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,6 +8,15 @@ builds:
   # Default is `-s -w -X main.version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{.Date}}`.
   ldflags:
   - -s -w -X internal.version.Version={{.Version}}
+  goos: # Goreleaser's default for this is darwin + linux, but let's be explicit
+    - darwin
+    - linux
+  goarch: # Goreleaser's default for this is 386 + amd64, but let's be explicit
+    - 386
+    - amd64
+  ignore: # Go 1.15+ doesn't support 32-bit Darwin
+    - goos: darwin
+      goarch: 386
 
 nfpms:
   -
