--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,19 +11,12 @@ workflows:
     jobs:
       - go-test:
           name: Go 1.15
-          docker-image: circleci/golang:1.15
+          docker-image: cimg/go:1.15.2
           run-lint: true
           test-coverage: true
-          test-tls: true
       - go-test:
           name: Go 1.14
-          docker-image: cimg/go:1.14.8
-          run-lint: true
-          test-coverage: true
-          test-tls: true
-      - go-test:
-          name: Go 1.13
-          docker-image: cimg/go:1.13
+          docker-image: cimg/go:1.14.9
       - test-publish
       - publish:
           filters:
@@ -45,9 +38,6 @@ jobs:
       test-coverage:
         type: boolean
         default: false
-      test-tls:
-        type: boolean
-        default: false  # older CircleCI images don't support using a recent enough curl version
     
     docker:
       - image: <<parameters.docker-image>>
@@ -87,12 +77,6 @@ jobs:
                 name: Store coverage results
                 command: cp build/coverage* /tmp/circle-artifacts
                 when: always
-      - when:
-          condition: <<parameters.test-tls>>
-          steps:
-            - run:
-                name: Run TLS version test
-                command: ./scripts/test-tls.sh
       - run:
           name: Run Prometheus endpoint test
           command: ./scripts/test-prometheus-endpoint.sh
@@ -104,7 +88,7 @@ jobs:
   test-publish:
     docker:
       - &release_docker_image
-        image: circleci/golang:1.14.9
+        image: cimg/go:1.15.2
         environment:
           <<: *environment
 
