--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ experimental:
     branches:
       only:
         - master
+        - v5
+        - v6
 
 workflows:
   workflow:
@@ -27,6 +29,19 @@ workflows:
               only: /v\d+/
           requires:
             - Go 1.14
+
+  # Run hourly integration tests on the private v6 branch
+  hourly-integration-test:
+    triggers:
+    - schedule:
+        cron: "0 * * * *"
+        filters:
+          branches:
+            only: v6
+    jobs:
+      - integration-test
+    when: $SCHEDULE_INTEGRATION_TESTS
+
       
 jobs:
   go-test:
