Enable hourly Relay integration tests against Production (#223)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ workflows:
           context: org-global
 
   # Run hourly integration tests on the private v6 branch
-  hourly-integration-test:
+  hourly-integration-test-stg:
     triggers:
     - schedule:
         cron: "0 * * * *"
@@ -42,6 +42,21 @@ workflows:
             only: v6
     jobs:
       - integration-test
+    when:
+      equal: ["https://github.com/launchdarkly/ld-relay-private", <<pipeline.project.git_url>>]
+  hourly-integration-test-prod:
+    triggers:
+    - schedule:
+        cron: "0 * * * *"
+        filters:
+          branches:
+            only: v6
+    jobs:
+      - integration-test:
+          ld_base_url: https://app.launchdarkly.com
+          ld_stream_url: https://stream.launchdarkly.com
+          ld_sdk_url: https://sdk.launchdarkly.com
+          ld_api_token_env_var: LD_API_TOKEN_PROD
     when:
       equal: ["https://github.com/launchdarkly/ld-relay-private", <<pipeline.project.git_url>>]
 
@@ -114,10 +129,26 @@ jobs:
           path: /tmp/circle-artifacts
 
   integration-test:
+    parameters:
+      ld_base_url:
+        type: string
+        default: https://ld-stg.launchdarkly.com
+      ld_stream_url:
+        type: string
+        default: https://stream-stg.launchdarkly.com
+      ld_sdk_url:
+        type: string
+        default: https://sdk-stg.launchdarkly.com
+      ld_api_token_env_var:
+        type: string
+        default: LD_API_TOKEN_STG
     machine: # can't use regular Docker mode because we need to run our own Docker containers and share files with them
       image: ubuntu-2004:202010-01
       docker_layer_caching: true
-    environment: &environment
+    environment:
+      LD_BASE_URL: <<parameters.ld_base_url>>
+      LD_STREAM_URL: <<parameters.ld_stream_url>>
+      LD_SDK_URL: <<parameters.ld_sdk_url>>
       CIRCLE_TEST_REPORTS: /tmp/circle-reports
       CIRCLE_ARTIFACTS: /tmp/circle-artifacts
       COMMON_GO_PACKAGES: >
@@ -137,7 +168,7 @@ jobs:
           keys: 
             - deps-relay-i9ntest-{{ checksum "go.mod" }}    
       - run: go get -u $COMMON_GO_PACKAGES
-      - run: go test -t integrationtests -i ./integrationtests # just install the dependencies for the tests
+      - run: LD_API_TOKEN=`echo $<<parameters.ld_api_token_env_var>>` go test -t integrationtests -i ./integrationtests # just install the dependencies for the tests
       - save_cache:
           key: deps-relay-i9ntest-{{ checksum "go.mod" }}    
           paths:
