(big segments #1) add basic big segments configuration for SDK clients (#237)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ build
 .vscode
 _testservice/testservice
 _testservice/*.pid
+
+temp_feature_branch_git_ssh_key
+temp_feature_branch_git_ssh_key.pub
