big segments integration test + misc fixes (#240)

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,4 @@ build
 _testservice/testservice
 _testservice/*.pid
 
-temp_feature_branch_git_ssh_key
-temp_feature_branch_git_ssh_key.pub
+temp_ssh
