--- a/.github/workflows/publish-to-acr.yml
+++ b/.github/workflows/publish-to-acr.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ v6 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,25 +25,16 @@ jobs:
         with:
           fetch-depth: '0'
 
-      - name: Bump version and push tag
-        id: gittag
-        uses: anothrNick/github-tag-action@1.35.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: minor
-          RELEASE_BRANCHES: main
-
-      - name: Checkout After Git Tag
-        uses: actions/checkout@v2.3.4
-        with:
-          fetch-depth: 0
+      - name: Read VERSION file
+        id: getversion
+        run: echo "::set-output name=version::$([[ $(cat ./relay/version/version.go | grep  'Version = ') =~ [0-9]+\.[0-9]+\.[0-9]+ ]]  && echo $BASH_REMATCH)"
 
       - name: ACR Build
         uses: ./.github/actions/acr-build
         id: acr-build
         with:
            repo: launchdarkly/ld-relay
-           imageTag: ${{ steps.gittag.outputs.tag }}
+           imageTag: ${{ steps.getversion.outputs.version }}
         env:
            CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 
