--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  go: circleci/go@1.6.0
+
 experimental:
   notify:
     branches:
@@ -160,14 +163,8 @@ jobs:
         github.com/jstemmer/go-junit-report
     steps:
       - checkout
-      - run:
-          name: install Go # since we're using machine mode, we can't use a preinstalled Go Docker image
-          command: |
-            sudo apt update
-            sudo apt install -y software-properties-common
-            sudo add-apt-repository -y ppa:longsleep/golang-backports
-            sudo apt update
-            sudo apt install -y golang-go
+      - go/install: # since we're using machine mode, we can't use a preinstalled Go Docker image
+          version: 1.15.12
       - run: go version && go env
       - restore_cache:
           keys: 
