--- a/Dockerfile.relativity
+++ b/Dockerfile.relativity
@@ -22,8 +22,6 @@ RUN go build -a -o ldr .
 
 FROM r1k8sacrdev.azurecr.io/r1/base/security-alpine3:v3
 
-RUN apk --update --no-cache add tshark
-
 RUN addgroup -g 1000 -S ldr-user && \
     adduser -u 1000 -S ldr-user -G ldr-user && \
     mkdir /ldr && \
@@ -31,6 +29,7 @@ RUN addgroup -g 1000 -S ldr-user && \
 
 RUN apk add --no-cache \
     curl \
+    tshark \
     ca-certificates \
  && update-ca-certificates \
  && rm -rf /var/cache/apk/*
