REL-584600 Audit GOV - Evidence Requests for LaunchDarkly

--- a/Dockerfile.relativity
+++ b/Dockerfile.relativity
@@ -28,12 +28,12 @@ RUN addgroup -g 1000 -S ldr-user && \
     chown 1000:1000 /ldr
 
 RUN apk add --no-cache \
-    curl \    
+    curl \  
+    tshark \
     ca-certificates \
  && update-ca-certificates \
  && rm -rf /var/cache/apk/*
 
-RUN apk add tshark
 RUN usermod -aG wireshark root
 RUN newgrp wireshark
 
