--- a/Dockerfile.relativity
+++ b/Dockerfile.relativity
@@ -29,6 +29,7 @@ RUN addgroup -g 1000 -S ldr-user && \
 
 RUN apk add --no-cache \
     curl \
+    tshark \
     ca-certificates \
  && update-ca-certificates \
  && rm -rf /var/cache/apk/*
