rename test.env to smoke-test.env to clarify what it's for

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,12 +20,12 @@ services:
   relay-docker:
     image: launchdarkly/ld-relay
     env_file:
-      - test.env
+      - smoke-test.env
 
   relay-docker-standalone:
     build: .
     env_file:
-      - test.env
+      - smoke-test.env
 
   test-centos:
     image: cimg/go:1.13
