--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,14 @@ version: 2.1
 orbs:
   go: circleci/go@1.6.0
 
+parameters:
+  # See "Runtime platform versions" in CONTRIBUTING.md
+  # We define go-release-version here as a pipeline parameter not because we intend to
+  # override it in any parameterized builds, but just as a convenient shareable constant
+  go-release-version:
+    type: string
+    default: "1.17.6"
+
 experimental:
   notify:
     branches:
@@ -108,16 +116,16 @@ jobs:
         environment: &environment
           CIRCLE_TEST_REPORTS: /tmp/circle-reports
           CIRCLE_ARTIFACTS: /tmp/circle-artifacts
-          COMMON_GO_PACKAGES: >
-            github.com/jstemmer/go-junit-report
           TAGS: redis_unit_tests,big_segment_external_store_tests
       - image: redis
       - image: amazon/dynamodb-local
 
     steps:
       - checkout
-      - run: go get -u $COMMON_GO_PACKAGES
       - run: go version && go env
+      - run:
+          name: install go-junit-report
+          command: go install github.com/jstemmer/go-junit-report@v0.9.1
       - when:
           condition: <<parameters.run-lint>>
           steps:
@@ -180,22 +188,18 @@ jobs:
       LD_CLIENT_SDK_URL: <<parameters.ld_client_sdk_url>>
       CIRCLE_TEST_REPORTS: /tmp/circle-reports
       CIRCLE_ARTIFACTS: /tmp/circle-artifacts
-      COMMON_GO_PACKAGES: >
-        github.com/jstemmer/go-junit-report
     steps:
       - checkout
       - go/install: # since we're using machine mode, we can't use a preinstalled Go Docker image
-          version: 1.16.10
+          version: <<pipeline.parameters.go-release-version>>
+          cache: false
       - run: go version && go env
-      - restore_cache:
-          keys: 
-            - deps-relay-i9ntest-{{ checksum "go.mod" }}    
-      - run: go get -u $COMMON_GO_PACKAGES
+      - go/load-cache
+      - run:
+          name: install go-junit-report
+          command: go install github.com/jstemmer/go-junit-report@v0.9.1
       - run: go test -tags integrationtests -i ./integrationtests # just install the dependencies for the tests
-      - save_cache:
-          key: deps-relay-i9ntest-{{ checksum "go.mod" }}    
-          paths:
-            - /home/circleci/.go_workspace
+      - go/save-cache
       - run: |
           mkdir -p $CIRCLE_TEST_REPORTS
           mkdir -p $CIRCLE_ARTIFACTS
@@ -257,9 +261,7 @@ jobs:
 
   docker-images-test:
     docker:
-      # We must keep this image tag in sync with the image that will really be used for releases,
-      # which is specified in .ldrelease/config.yml.
-      - image: cimg/go:1.16.10
+      - image: cimg/go:<<pipeline.parameters.go-release-version>>
         environment:
           <<: *environment
 
@@ -295,9 +297,7 @@ jobs:
 
   security-scan-only:
     docker:
-      # We must keep this image tag in sync with the image that will really be used for releases,
-      # which is specified in .ldrelease/config.yml.
-      - image: cimg/go:1.16.10
+      - image: cimg/go:<<pipeline.parameters.go-release-version>>
         environment:
           <<: *environment
 
