--- a/Dockerfile.relativity
+++ b/Dockerfile.relativity
@@ -1,6 +1,6 @@
 # This is a standalone Dockerfile that does not depend on goreleaser building the binary
 # It is NOT the version that is pushed to dockerhub
-FROM golang:1.15.2-alpine as builder
+FROM golang:1.17.7-alpine3.14 as builder
 
 RUN apk --no-cache add \
     libc-dev \
@@ -26,7 +26,7 @@ RUN addgroup -g 1000 -S ldr-user && \
     adduser -u 1000 -S ldr-user -G ldr-user && \
     mkdir /ldr && \
     chown 1000:1000 /ldr
-    
+
 RUN apk add --no-cache \
     curl \
     ca-certificates \
