--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -11,6 +11,8 @@ RUN apk add --no-cache \
  && update-ca-certificates \
  && rm -rf /var/cache/apk/*
 
+RUN apk upgrade openssl  # for CVE-2022-0778 - this fix is not yet available in an Alpine Docker image
+
 COPY ld-relay /usr/bin/ldr
 
 RUN addgroup -g 1000 -S ldr-user && \
