--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -56,7 +56,7 @@ release:
 
 dockers:
   - image_templates:
-    - "launchdarkly/ld-relay:{{ .Tag }}"
+    - "launchdarkly/ld-relay:{{ .Version }}"
     - "launchdarkly/ld-relay:v{{ .Major }}"
     - "launchdarkly/ld-relay:latest"
     goos: linux
